--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.jboss.errai.archetypes</groupId>
     <artifactId>archetypes-parent</artifactId>
-    <version>1.3.0-SNAPSHOT</version>
+    <version>1.3.0.Beta1.R1</version>
     <packaging>pom</packaging>
 
     <modules>
