--- a/cdi-quickstart/pom.xml
+++ b/cdi-quickstart/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.jboss.errai.archetypes</groupId>
         <artifactId>archetypes-parent</artifactId>
-        <version>1.3.0.Beta1.R1</version>
+        <version>1.3.1.Beta1.R1-SNAPSHOT</version>
     </parent>
 
     <groupId>org.jboss.errai.archetypes</groupId>
