--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,45 @@
 
     <groupId>org.jboss.errai.archetypes</groupId>
     <artifactId>archetypes-parent</artifactId>
-    <version>1.3.1.Beta1.R1-SNAPSHOT</version>
+    <version>1.3.0-SNAPSHOT</version>
     <packaging>pom</packaging>
+
+    <url>http://jboss.org/errai/errai</url>
+
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <description>
+        A GWT framework
+    </description>
+
+    <developers>
+        <developer>
+            <name>Mike Brock</name>
+        </developer>
+        <developer>
+            <name>Christian Sadilek</name>
+        </developer>
+        <developer>
+            <name>Heiko Braun</name>
+        </developer>
+    </developers>
+
+    <organization>
+        <name>JBoss, a division of Red Hat</name>
+        <url>http://www.jboss.org</url>
+    </organization>
+
+    <!-- IssueManagement -->
+    <issueManagement>
+        <system>jira</system>
+        <url>http://jira.jboss.org/jira/browse/ERRAI</url>
+    </issueManagement>
 
     <modules>
         <module>bus-quickstart</module>
