--- a/bus-quickstart/pom.xml
+++ b/bus-quickstart/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.jboss.errai.archetypes</groupId>
         <artifactId>archetypes-parent</artifactId>
-        <version>1.3.1.Beta1.R1-SNAPSHOT</version>
+        <version>1.3.0-SNAPSHOT</version>
     </parent>
 
     <groupId>org.jboss.errai.archetypes</groupId>
