updated to 2.0-SNAPSHOT

--- a/jaxrs-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/jaxrs-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -79,6 +79,7 @@
 			<groupId>org.jboss.errai</groupId>
 			<artifactId>errai-jaxrs-client</artifactId>
 			<version>${errai.jaxrs.version}</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
