fix to AS5 and 6 profile for JAX-RS

--- a/jaxrs-quickstart/pom.xml
+++ b/jaxrs-quickstart/pom.xml
@@ -21,4 +21,10 @@
 	<artifactId>jaxrs-quickstart</artifactId>
 	<packaging>jar</packaging>
 	<name>Errai JAX-RS Quickstart Archetype</name>
+	
+	<properties>
+        <errai.jaxrs.target.version>${errai.target.version}</errai.jaxrs.target.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+	
 </project>
