--- a/jaxrs-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/jaxrs-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -42,7 +42,7 @@
 
 	<properties>
 		<errai.version>${errai.target.version}</errai.version>
-		<errai.jaxrs.version>${errai.target.version}</errai.jaxrs.version>
+		<errai.jaxrs.version>${errai.jaxrs.target.version}</errai.jaxrs.version>
 		<gwt.version>2.3.0</gwt.version>
 		<gwt.maven.version>2.3.0</gwt.maven.version>
 		<webXmlPath>src/jetty/web.xml</webXmlPath>
@@ -134,6 +134,18 @@
 			<dependencies>
 				<dependency>
 					<groupId>org.jboss.errai</groupId>
+					<artifactId>errai-bus</artifactId>
+					<version>\${errai.version}</version>
+					<exclusions>
+                        <exclusion>
+                            <artifactId>xml-apis</artifactId>
+                            <groupId>xml-apis</groupId>
+                        </exclusion>
+                    </exclusions>
+				</dependency>
+				
+				<dependency>
+					<groupId>org.jboss.errai</groupId>
 					<artifactId>errai-ioc</artifactId>
 					<exclusions>
 						<exclusion>
@@ -217,6 +229,13 @@
 					<groupId>javassist</groupId>
 					<artifactId>javassist</artifactId>
 					<version>3.12.1.GA</version>
+					<scope>provided</scope>
+				</dependency>
+
+				<dependency>
+					<groupId>org.jboss.resteasy</groupId>
+					<artifactId>resteasy-jaxrs</artifactId>
+					<version>2.2.1.GA</version>
 					<scope>provided</scope>
 				</dependency>
 			</dependencies>
