--- a/jaxrs-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/jaxrs-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -244,7 +244,7 @@
 			<id>jboss7</id>
 
 			<properties>
-				<webXmlPath>src/jboss/web.xml</webXmlPath>
+				<webXmlPath>src/jboss7/web.xml</webXmlPath>
 			</properties>
 		</profile>
 		<profile>
