--- a/cdi-quickstart/pom.xml
+++ b/cdi-quickstart/pom.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.jboss.errai.archetypes</groupId>
-        <artifactId>archetypes-parent</artifactId>
-        <version>2.0-SNAPSHOT</version>
-    </parent>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.jboss.errai.archetypes</groupId>
+		<artifactId>archetypes-parent</artifactId>
+		<version>2.0-SNAPSHOT</version>
+	</parent>
 
-    <groupId>org.jboss.errai.archetypes</groupId>
-    <artifactId>cdi-quickstart</artifactId>
-    <packaging>jar</packaging>
+	<groupId>org.jboss.errai.archetypes</groupId>
+	<artifactId>cdi-quickstart</artifactId>
+	<packaging>jar</packaging>
 
-    <name>Errai CDI Quickstart Archetype</name>
+	<name>Errai CDI Quickstart Archetype</name>
+
+	<properties>
+		<errai.cdi.target.version>${errai.target.version}</errai.cdi.target.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 </project>
