--- a/cdi-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/cdi-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -12,12 +12,12 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<errai.version>${errai.target.version}</errai.version>
-		<errai-jms.version>1.1-SNAPSHOT</errai-jms.version>
+		<errai.cdi.version>${errai.cdi.target.version}</errai.cdi.version>
 		<gwt.version>2.3.0</gwt.version>
 		<hsqldb.version>1.8.0.7</hsqldb.version>
 		<weld.version>1.1.0.Final</weld.version>
 		<gwt.maven.version>2.3.0</gwt.maven.version>
-		<mvel.version>2.0.18-RC4</mvel.version>
+		<mvel.version>2.1.Beta6</mvel.version>
 		<jetty.version>6.1.25</jetty.version>
 		<slf4j.version>1.5.11</slf4j.version>
 		<uel.impl.version>2.1.2-b04</uel.impl.version>
@@ -112,26 +112,26 @@
 		<dependency>
 			<groupId>org.jboss.errai</groupId>
 			<artifactId>errai-cdi-client</artifactId>
-			<version>\${errai.version}</version>
+			<version>\${errai.cdi.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jboss.errai</groupId>
 			<artifactId>errai-javax-enterprise</artifactId>
-			<version>\${errai.version}</version>
+			<version>\${errai.cdi.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jboss.errai</groupId>
 			<artifactId>errai-weld-integration</artifactId>
-			<version>\${errai.version}</version>
+			<version>\${errai.cdi.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jboss.errai</groupId>
 			<artifactId>errai-cdi-jetty</artifactId>
-			<version>\${errai.version}</version>
+			<version>\${errai.cdi.version}</version>
 		</dependency>
 
 		<!-- CDI Development Utils -->
