--- a/cdi-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/cdi-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -48,7 +48,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<version>4.10</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -1180,6 +1180,231 @@
                 </plugins>
             </build>
         </profile>
+        
+        <!-- Profile that must be enabled when running integration tests (any test that extends GWTTestCase directly or indirectly) -->
+        <profile>
+            <id>integration-test</id>
+            <properties>
+                <profile.testOutputDirectory>war/WEB-INF/classes</profile.testOutputDirectory>
+            </properties>
+
+            <build>
+                <testResources>
+                    <testResource>
+                        <directory>src/test/java</directory>
+                    </testResource>
+                    <testResource>
+                        <directory>src/test/resources</directory>
+                    </testResource>
+                </testResources>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <configuration>
+                            <source>1.6</source>
+                            <target>1.6</target>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.7.2</version>
+                        <configuration>
+                            <skipTests>false</skipTests>
+                            <additionalClasspathElements>
+                                <additionalClasspathElement>\${basedir}/\${profile.testOutputDirectory}/</additionalClasspathElement>
+                                <additionalClasspathElement>\${basedir}/src/test/java/</additionalClasspathElement>
+                                <additionalClasspathElement>\${basedir}/src/main/java/</additionalClasspathElement>
+                            </additionalClasspathElements>
+                            <useManifestOnlyJar>false</useManifestOnlyJar>
+                            <forkMode>pertest</forkMode>
+                            
+                            <!-- Note: to run the test in a real browser, set -DargLine='-Dgwt.args="-runStyle Manual:1"' -->
+                            <argLine>-Xmx2048m \${argLine}</argLine>
+                            
+
+                            <systemProperties>
+                                <!-- Must disable long polling for automated tests to succeed -->
+                                 <property>
+                                    <name>errai.hosted_mode_testing</name>
+                                    <value>true</value>
+                                 </property>
+                            </systemProperties>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+
+            <dependencies>
+                <dependency>
+                    <groupId>javax.servlet</groupId>
+                    <artifactId>servlet-api</artifactId>
+                    <version>2.5</version>
+                    <scope>provided</scope>
+                </dependency>
+                <dependency>
+                    <groupId>javax.servlet</groupId>
+                    <artifactId>jsp-api</artifactId>
+                    <version>2.0</version>
+                    <scope>provided</scope>
+                </dependency>
+                <dependency>
+                    <groupId>log4j</groupId>
+                    <artifactId>log4j</artifactId>
+                    <version>1.2.16</version>
+                </dependency>
+                <dependency>
+                    <groupId>junit</groupId>
+                    <artifactId>junit</artifactId>
+                    <version>4.8.1</version>
+                    <scope>compile</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.jboss.ejb3</groupId>
+                    <artifactId>jboss-ejb3-api</artifactId>
+                    <scope>provided</scope>
+                    <version>3.1.0</version>
+                </dependency>
+
+                <!-- Errai Core -->
+                <dependency>
+                    <groupId>org.jboss.errai</groupId>
+                    <artifactId>errai-bus</artifactId>
+                    <version>\${errai.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.jboss.errai</groupId>
+                    <artifactId>errai-ioc</artifactId>
+                    <version>\${errai.version}</version>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>javax.inject</groupId>
+                            <artifactId>javax.inject</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>javax.annotation</groupId>
+                            <artifactId>jsr250-api</artifactId>
+                        </exclusion>
+                    </exclusions>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.jboss.errai</groupId>
+                    <artifactId>errai-cdi-client</artifactId>
+                    <version>\${errai.version}</version>
+                    <scope>compile</scope>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.jboss.errai</groupId>
+                    <artifactId>errai-tools</artifactId>
+                    <version>\${errai.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.mvel</groupId>
+                    <artifactId>mvel2</artifactId>
+                    <version>\${mvel.version}</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.jboss.errai</groupId>
+                    <artifactId>errai-cdi-jetty</artifactId>
+                    <version>\${errai.version}</version>
+                </dependency>
+
+                <!-- CDI Development Utils -->
+                <!-- This must be placed above com.google.gwt:gwt-dev to override the
+                            Jetty that is present there -->
+                <dependency>
+                    <groupId>org.mortbay.jetty</groupId>
+                    <artifactId>jetty</artifactId>
+                    <version>\${jetty.version}</version>
+                    <scope>compile</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.mortbay.jetty</groupId>
+                    <artifactId>jetty-plus</artifactId>
+                    <version>\${jetty.version}</version>
+                    <scope>compile</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.mortbay.jetty</groupId>
+                    <artifactId>jetty-naming</artifactId>
+                    <version>\${jetty.version}</version>
+                    <scope>compile</scope>
+                </dependency>
+
+                <!-- Weld Modules -->
+                <dependency>
+                    <groupId>org.jboss.weld.se</groupId>
+                    <artifactId>weld-se-core</artifactId>
+                    <version>\${weld.version}</version>
+                    <scope>compile</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.jboss.weld.servlet</groupId>
+                    <artifactId>weld-servlet</artifactId>
+                    <version>\${weld.version}</version>
+                    <scope>compile</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.glassfish.web</groupId>
+                    <artifactId>el-impl</artifactId>
+                    <scope>runtime</scope>
+                    <version>2.1.2-b04</version>
+                </dependency>
+
+                <!-- GWT and GWT Extensions -->
+                <dependency>
+                    <groupId>com.google.gwt</groupId>
+                    <artifactId>gwt-user</artifactId>
+                    <version>\${gwt.version}</version>
+                    <scope>compile</scope>
+                </dependency>
+
+                <dependency>
+                    <groupId>com.google.gwt</groupId>
+                    <artifactId>gwt-dev</artifactId>
+                    <version>\${gwt.version}</version>
+                    <scope>compile</scope>
+                </dependency>
+
+                <dependency>
+                    <groupId>javax.validation</groupId>
+                    <artifactId>validation-api</artifactId>
+                    <version>1.0.0.GA</version>
+                    <scope>compile</scope>
+                </dependency>
+
+                <dependency>
+                    <groupId>javax.validation</groupId>
+                    <artifactId>validation-api</artifactId>
+                    <version>1.0.0.GA</version>
+                    <classifier>sources</classifier>
+                    <scope>compile</scope>
+                </dependency>
+
+                <!-- Runtime / Container dependencies -->
+                <dependency>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                    <version>\${slf4j.version}</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.jboss</groupId>
+                    <artifactId>jboss-common-core</artifactId>
+                    <version>2.2.14.GA</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.jboss.errai</groupId>
+                    <artifactId>errai-javax-enterprise</artifactId>
+                    <version>\${errai.version}</version>
+                    <scope>provided</scope>
+                </dependency>
+
+            </dependencies>
+        </profile>
 	</profiles>
 	<build>
 		<finalName>\${project.artifactId}</finalName>
@@ -1267,6 +1492,29 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
+      
+            <plugin>
+                <groupId>org.jboss.errai</groupId>
+                <artifactId>jacoco-gwt-maven-plugin</artifactId>
+                <version>0.5.4-SNAPSHOT</version>
+                
+                <executions>
+                    <execution>
+                        <id>jacoco-gwt-prepare-agent</id>
+                        <phase>initialize</phase>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>jacoco-gwt-report</id>
+                        <phase>site</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 		</plugins>
 		<pluginManagement>
 			<plugins>
@@ -1290,6 +1538,19 @@
 										<execute />
 									</action>
 								</pluginExecution>
+                                <pluginExecution>
+                                    <pluginExecutionFilter>
+                                        <groupId>org.jboss.errai</groupId>
+                                        <artifactId>jacoco-gwt-maven-plugin</artifactId>
+                                        <versionRange>[0.0,)</versionRange>
+                                        <goals>
+                                            <goal>prepare-agent</goal>
+                                        </goals>
+                                    </pluginExecutionFilter>
+                                    <action>
+                                        <ignore />
+                                    </action>
+                                </pluginExecution>
 							</pluginExecutions>
 						</lifecycleMappingMetadata>
 					</configuration>
