--- a/cdi-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/cdi-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -12,7 +12,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <errai.version>${errai.target.version}</errai.version>
-        <errai-jms.version>1.1-SNAPSHOT</errai-jms.version>
+        <errai.cdi.version>${errai.cdi.target.version}</errai.cdi.version>
         <gwt.version>2.3.0</gwt.version>
         <hsqldb.version>1.8.0.7</hsqldb.version>
         <weld.version>1.1.0.Final</weld.version>
@@ -112,26 +112,26 @@
         <dependency>
             <groupId>org.jboss.errai</groupId>
             <artifactId>errai-cdi-client</artifactId>
-            <version>\${errai.version}</version>
+            <version>\${errai.cdi.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.jboss.errai</groupId>
             <artifactId>errai-javax-enterprise</artifactId>
-            <version>\${errai.version}</version>
+            <version>\${errai.cdi.version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.jboss.errai</groupId>
             <artifactId>errai-weld-integration</artifactId>
-            <version>\${errai.version}</version>
+            <version>\${errai.cdi.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.jboss.errai</groupId>
             <artifactId>errai-cdi-jetty</artifactId>
-            <version>\${errai.version}</version>
+            <version>\${errai.cdi.version}</version>
         </dependency>
 
         <!-- CDI Development Utils -->
@@ -1231,6 +1231,25 @@
                             </systemProperties>
                         </configuration>
                     </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <version>1.3</version>
+                        <executions>
+                            <execution>
+                                <id>test.webxml</id>
+                                <phase>process-test-resources</phase>
+                                <configuration>
+                                    <tasks>
+                                        <copy file="src/jetty/web.xml" toDir="war/WEB-INF" overwrite="true" />
+                                    </tasks>
+                                </configuration>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
                 </plugins>
             </build>
 
@@ -1451,6 +1470,16 @@
                 <version>2.2</version>
                 <configuration>
                     <skip>true</skip>
+                </configuration>
+            </plugin>
+
+            <!-- Tests are skipped by default because they require additional GWT dependencies.
+                 Run mvn with -Pintegration-test to enable testing. -->
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.7.2</version>
+                <configuration>
+                    <skipTests>true</skipTests>
                 </configuration>
             </plugin>
 
