--- a/cdi-quickstart/src/main/resources/archetype-resources/src/jboss/web.xml
+++ b/cdi-quickstart/src/main/resources/archetype-resources/src/jboss/web.xml
@@ -9,6 +9,9 @@
          version="2.5">
 
     <servlet>
+        <!-- NOTE: the integration-test profile uses this web.xml. Integration tests only work properly
+             with the DefaultBlockingServlet. If you change this setting, alter the integration-test
+             profile in pom.xml to use a different web.xml (for example, maybe src/tomcat/web.xml) -->
         <servlet-name>ErraiServlet</servlet-name>
         <servlet-class>org.jboss.errai.bus.server.servlet.DefaultBlockingServlet</servlet-class>
          <init-param>
