update errai-cdi archetype to use SimpleDispatcher by default

--- a/cdi-quickstart/src/main/resources/archetype-resources/src/main/resources/ErraiService.properties
+++ b/cdi-quickstart/src/main/resources/archetype-resources/src/main/resources/ErraiService.properties
@@ -19,23 +19,15 @@ ${symbol_pound} limitations under the License.
 ${symbol_pound}
 
 ${symbol_pound}
-${symbol_pound} Request dispatcher implementation (default is SimpleDispatcher)
+${symbol_pound} Request dispatcher implementation (SimpleDispatcher must be used for Errai CDI)
 ${symbol_pound}
-${symbol_pound}errai.dispatcher_implementation=org.container.errai.bus.server.SimpleDispatcher
-errai.dispatcher_implementation=org.jboss.errai.bus.server.AsyncDispatcher
-
+errai.dispatcher_implementation=org.jboss.errai.bus.server.SimpleDispatcher
 
 ${symbol_pound}
 ${symbol_pound} Worker pool size.  This is the number of threads the asynchronous worker pool should provide for processing
 ${symbol_pound} incoming messages. This option is only valid when using the AsyncDispatcher implementation.
 ${symbol_pound}
 errai.async.thread_pool_size=5
-
-${symbol_pound}
-${symbol_pound} Worker timeout (in seconds).  This defines the time that a single asychronous process may run, before the worker pool
-${symbol_pound} terminates it and reclaims the thread.   This option is only valid when using the AsyncDispatcher implementation.
-${symbol_pound}
-errai.async.worker.timeout=5
 
 ${symbol_pound}
 ${symbol_pound} Specify the Authentication/Authorization Adapter sendNowWith use
