--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>org.jboss.errai.archetypes</groupId>
 	<artifactId>archetypes-parent</artifactId>
-	<version>1.3.2-SNAPSHOT</version>
+	<version>1.3.2.Final</version>
 	<packaging>pom</packaging>
 
 	<name>Errai Archetypes</name>
