--- a/cdi-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/cdi-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -395,7 +395,7 @@
               <groupId>javax.inject</groupId>
             </exclusion>
           </exclusions>
-          <scope>provided</scope>
+          <scope>compile</scope>
           <version>\${errai.version}</version>
         </dependency>
 
@@ -597,7 +597,7 @@
               <groupId>javax.inject</groupId>
             </exclusion>
           </exclusions>
-          <scope>provided</scope>
+          <scope>compile</scope>
           <version>\${errai.version}</version>
         </dependency>
 
@@ -813,7 +813,7 @@
               <groupId>javax.inject</groupId>
             </exclusion>
           </exclusions>
-          <scope>provided</scope>
+          <scope>compile</scope>
           <version>\${errai.version}</version>
         </dependency>
 
@@ -1036,7 +1036,7 @@
               <groupId>javax.inject</groupId>
             </exclusion>
           </exclusions>
-          <scope>provided</scope>
+          <scope>compile</scope>
           <version>\${errai.version}</version>
         </dependency>
 
