--- a/jaxrs-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/jaxrs-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -151,7 +151,7 @@
               <groupId>javax.annotation</groupId>
             </exclusion>
           </exclusions>
-          <scope>provided</scope>
+          <scope>compile</scope>
           <version>\${errai.version}</version>
         </dependency>
 
@@ -198,7 +198,7 @@
               <groupId>javax.inject</groupId>
             </exclusion>
           </exclusions>
-          <scope>provided</scope>
+          <scope>compile</scope>
           <version>\${errai.version}</version>
         </dependency>
 
