move jndi.properties to jetty profile so it is copied on every packaging.

--- a/cdi-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/cdi-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -222,6 +222,8 @@
                       overwrite="true" />
                     <copy file="src/jetty/jetty-env.xml" toDir="war/WEB-INF"
                       overwrite="true" />
+                    <copy file="src/jetty/jndi.properties" toDir="war/WEB-INF/classes/"
+                          overwrite="true" />
                   </tasks>
                 </configuration>
                 <goals>
