Adding kitchen sink to parent pom

--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
 		<module>bus-quickstart</module>
 		<module>cdi-quickstart</module>
 		<module>jaxrs-quickstart</module>
+		<module>kitchensink-quickstart</module>
 	</modules>
 
 	<scm>
