Fixes based on Burr and Fred's feedback

--- a/kitchensink-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/kitchensink-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -573,7 +573,7 @@
          <releases>
          </releases>
          <snapshots>
-            <enabled>false</enabled>
+            <enabled>true</enabled>
          </snapshots>
       </repository>
    </repositories>
