--- a/cdi-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/cdi-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -1567,7 +1567,7 @@
             <plugin>
                 <groupId>org.jboss.errai</groupId>
                 <artifactId>jacoco-gwt-maven-plugin</artifactId>
-                <version>0.5.4-SNAPSHOT</version>
+                <version>0.5.4.201202141554</version>
 
                 <executions>
                     <execution>
