--- a/kitchensink-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/kitchensink-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -23,7 +23,7 @@
       <!-- Certified version of the JBoss EAP components we want to use -->
       <javaee6.web.spec.version>3.0.0.Beta1-redhat-1</javaee6.web.spec.version>
       <!-- Alternatively, comment out the above line, and un-comment the line below to 
-        use version 2.0.0.Beta1 which is based on community built dependencies. 
+        use version 2.0.0.Final which is based on community built dependencies. 
         You can actually use this stack with any version of JBoss AS that implements
         the Java EE 6 web profile -->
       <!-- 
@@ -39,7 +39,7 @@
       -->
 #end
 
-      <errai.version>2.0.Beta1</errai.version>
+      <errai.version>2.0-SNAPSHOT</errai.version>
       <gwt.version>2.4.0</gwt.version>
       <gwt.maven.version>2.4.0</gwt.maven.version>
       <mvel.version>2.1.Beta6</mvel.version>
